"getOne method and getAll method added to swagger GUI"
